--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 			crossorigin="anonymous" /> -->
 		<link rel="stylesheet" href="style.css" />
 
-		<title>Project Title</title>
+		<title>Sound Board</title>
 	</head>
 	<body>
-		<h1>Project Starter</h1>
+		<audio src="sounds/"></audio>
 
 		<script src="script.js"></script>
 	</body>
